<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cricket_main_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimension_eight">

        <TextView
            android:id="@+id/cricket_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:paddingLeft="@dimen/dimension_four"
            android:paddingRight="@dimen/dimension_four"
            android:text="@string/cricket_title"
            android:textAllCaps="true"
            android:textColor="@color/black_color"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_below="@id/cricket_textview"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimension_four"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimension_four"
            android:paddingRight="@dimen/dimension_four"
            android:text="@string/cricket_quote_first"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_below="@id/cricket_textview"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimension_four"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimension_four"
            android:paddingRight="@dimen/dimension_four"
            android:text="@string/cricket_quote_second"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/long_textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimension_four"
            android:layout_weight="2"
            android:paddingLeft="@dimen/dimension_four"
            android:paddingRight="@dimen/dimension_four"
            android:text="@string/cricket_label"
            android:textAllCaps="true"
            android:textColor="@color/black_color"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_eight"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_team_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/long_textView"
                android:layout_weight="1"
                android:onClick="cricketDisplayA"
                android:text="@string/button_team_a" />

            <Button
                android:id="@+id/button_team_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/long_textView"
                android:layout_toRightOf="@+id/button_team_a"
                android:layout_weight="1"
                android:onClick="cricketDisplayB"
                android:text="@string/button_team_b" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
