<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basket_main_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cricket_main_id"
        android:orientation="vertical">

        <View
            android:id="@+id/view_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimension_four"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/basket_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="@dimen/dimension_four"
            android:text="@string/basket_title"
            android:textAllCaps="true"
            android:textColor="@color/black_color"
            android:textSize="40sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimension_eight"
            android:onClick="scoreBasket"
            android:padding="@dimen/dimension_eight"
            android:text="@string/button_score_counter"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimension_eight"
            android:onClick="systemExit"
            android:padding="@dimen/dimension_eight"
            android:text="@string/button_exit"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
