<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_basket_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linear_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Custom_TextView_Team"
                android:text="@string/text_team_a" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/Custom_TextView_Score"
                android:text="0" />


            <Button
                android:id="@+id/team_a_three_score"
                style="@style/CustomButtonStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="+3 Point" />

            <Button
                android:id="@+id/team_a_two_score"
                style="@style/CustomButtonStyle"
                android:text="+2 Point" />

            <Button
                android:id="@+id/team_a_one_score"
                style="@style/CustomButtonStyle"
                android:text="+1 Point" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/dimension_four"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Custom_TextView_Team"
                android:text="@string/text_team_b" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/Custom_TextView_Score"
                android:text="0" />


            <Button
                android:id="@+id/team_b_three_score"
                style="@style/CustomButtonStyle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="+3 Point" />

            <Button
                android:id="@+id/team_b_two_score"
                style="@style/CustomButtonStyle"
                android:text="+3 Point" />

            <Button

                android:id="@+id/team_b_one_score"
                style="@style/CustomButtonStyle"
                android:text="+3 Point" />


        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:padding="@dimen/dimension_four"
        android:text="@string/button_reset" />

</RelativeLayout>
